Adding Dates to "Bankist" App

--- a/Numbers-Dates-Timers-Bankist/style.css
+++ b/Numbers-Dates-Timers-Bankist/style.css
@@ -152,6 +152,7 @@ nav {
   text-transform: uppercase;
   font-weight: 500;
   color: #666;
+  padding-right: 10px;
 }
 
 .movements__type--deposit {
