--- a/Numbers-Dates-Timers-Bankist/style.css
+++ b/Numbers-Dates-Timers-Bankist/style.css
@@ -297,7 +297,7 @@ h2 {
   font-weight: 600;
 }
 
-.transfer {
+.timeout {
   display: flex;
   justify-content: space-between;
   align-items: baseline;
@@ -305,6 +305,11 @@ h2 {
 }
 
 .label--transfer {
+  opacity: 0;
+  transition: all 1s;
+}
+
+.label--loan {
   opacity: 0;
   transition: all 1s;
 }
